--- a/public/style.css
+++ b/public/style.css
@@ -11,12 +11,12 @@
 	font-family: 'Goudy Bookletter 1911', serif;
 }
 /* Resets */
-.row {
-	margin-bottom: 0px;
-}
 html,body{
 	width:100%;
 	overflow-x:hidden;
+}
+.row {
+	margin-bottom: 0px;
 }
 
 
@@ -71,4 +71,20 @@ html,body{
 	.social-link {
 		margin-left: 1rem;
 	}
+}
+
+/* .slider */
+.overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: rgba(0, 0, 0, 0.5);
+	z-index: 8;
+}
+.carousel-fixed-item {
+	font-weight: 700;
+	text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff;
+	letter-spacing: 1px;
 }
