--- a/public/style.css
+++ b/public/style.css
@@ -22,6 +22,12 @@ html,body{
 
 /*--- Top down CSS ---*/
 /* nav */
+.brand-logo {
+	max-height: 6.5rem; /* Link height same as logo height */
+}
+.brand-logo img{
+	max-height: 6.5rem;
+}
 .dropdown-content {
 	min-width: 200px;
 }
@@ -39,6 +45,7 @@ html,body{
 	font-size: 1.35rem;
 	margin-top: -1px;
 	margin-bottom: -1px;
+	padding-top: 2.5rem;
 }
 
 #contact-bar a:link {
@@ -81,8 +88,13 @@ html,body{
 	background: rgba(0, 0, 0, 0.5);
 	z-index: 8;
 }
-.carousel-fixed-item {
-	font-weight: 700;
-	text-shadow: 0px 0px 10px #fff, 0px 0px 10px #fff;
-	letter-spacing: 1px;
+.slider .slides li img {
+	/* background-position: center; */
+	background-position-x: center;
+	background-position-y: top;
+}
+
+/* #sponsors */
+#sponsors img {
+	max-width: 100%;
 }
