Add nav link to ticket info page.

--- a/public/views/home/home.html
+++ b/public/views/home/home.html
@@ -13,8 +13,8 @@
 		</ul>
 	</div>
 </section>
-<section id="home-content" class="container">
-	<h5 class="goudyl center-align">Boxes!</h5>
+<section id="home-boxes" >
+	
 </section>
 
 <section id="sponsors" class="container">
