--- a/public/views/main.html
+++ b/public/views/main.html
@@ -19,7 +19,7 @@
 				</ul>
 				<li><a class="dropdown amber-text text-accent-2" data-activates='dropdown2'>Tickets</a></li>
 				<ul id='dropdown2' class='dropdown-content black lighten-5'>
-					<li><a class="waves-effect" href="#">Ticket Info</a></li>
+					<li><a class="waves-effect" href="ticket-info">Ticket Info</a></li>
 					<li><a class="waves-effect" href="#">Discounts</a></li>
 					<li><a class="waves-effect" href="#">General Admission</a></li>
 					<li><a class="waves-effect" href="#">Queen's Joust & Feast</a></li>
@@ -147,6 +147,7 @@
 		</div>
 	</div>
 </div>
+
 <ui-view></ui-view>
 
 
