Add nav link for ticket info

--- a/public/views/main.html
+++ b/public/views/main.html
@@ -79,7 +79,7 @@
 				</a>
 				<div class="collapsible-body black">
 					<ul>
-						<li><a href="#" class="amber-text text-accent-2 waves-effect">Ticket Info</a></li>
+						<li><a href="ticket-info" class="amber-text text-accent-2 waves-effect">Ticket Info</a></li>
 						<li><a href="#" class="amber-text text-accent-2 waves-effect">Discounts</a></li>
 						<li><a href="#" class="amber-text text-accent-2 waves-effect">General Admission</a></li>
 						<li><a href="#" class="amber-text text-accent-2 waves-effect">Queen's Joust & Feast</a></li>
